@@ -5,6 +5,8 @@ version 2.01 ()
 	Thank Balinares for patch
 3. Bug fix. Authoritative flag reversed
 	Thank Chris Darroch for the patch
+4. Support arguments in FCGIWrapper
+	Thank Andre Nathan for suggestion
 
 version 2.0 ( Oct 29th 2006 )
 1. Support FastCGI Authorizer protocols now.
